# Notes

./: README.md
3D/VINS/VINS-mono/: 光流法.md
3D/VINS/VINS-mono/FlowMethod/: 光流法.md  (+4 more)
Ros/: readme.md
Ros/1_install_ros/: README.md
Ros/ros2_note/: README.md
Ros/ros2_note/2_cognition_ros2/: README.md
Ros/ros2_note/3_ros2_node/: README.md
Ros/ros_learn/3_ros2_node/: README.md
Ros/ros_learn/3_ros2_node/node_ws/src/cognition_node_c++/: CMakeLists.txt
Ros/ros_learn/4_topic_and_serive/: README.md
Ros/ros_learn/6_ros_interface/: README.md
Ros/ros_learn/7_ros_launch/: README.md
Ros/ros_learn/8_ros_tool/: README.md
c++/Eigen_learn/: Array.cpp  Block.cpp  CMakeLists.txt  Confuse.cpp  Function.cpp  Init.cpp  Map.cpp  Matrix.cpp  StorageOrder.cpp
deep_learning/classic_network/: readme.md
deep_learning/classic_network/AlexNet/: readme.md
deep_learning/classic_network/Resnet/: readme.md
deep_learning/classic_network/VGG/: readme.md
deep_learning/classic_network/googlenet/: readme.md
deep_learning/pytorch/: learn_1.ipynb  learn_2.ipynb  learn_3.ipynb  learn_4.ipynb  learn_5.ipynb  model.pth
deep_learning/yolo-series/: yolov1.md
deep_learning/yolo-series/yolov1/: predict.ipynb  yolov1_tf.py
deep_learning/yolo-series/yolov2/: yolov2.md
deep_learning/语义分割/语义分割/: main.py  test.ipynb
git/: REMADE.md
machine_learning/Clustering/: README.md
machine_learning/MNIST/mnist-1/: 数据集简单处理.ipynb
machine_learning/MNIST/mnist-2/: 最近邻分类(KNN)-tf.ipynb
machine_learning/MNIST/mnist-3/: CNN_1.ipynb
machine_learning/SVM/: README.md  hog.py  hog_numpy.py  hog_opencv.py  svm_opencv.py  svm_sklearn.py
machine_learning/SVM/svm/: svm_numpy.py  svm_opencv.py
math/LinearAlgebra/: 1_determinant.md  1_行列式.md  2_calculate_matrix.md  3_elementary_transformation.md
memorandum/cheatsheets-ai/: README.md
opencv/Electric_competition/: crossroad.cpp  figure.pro  include.h  main.cpp  number.cpp  serial.h
opencv/Electric_competition/picture1/: 1.txt  2.txt  4.txt  5.txt  6.txt
opencv/Electric_competition/svm/: svm_1.xml
opencv/Electric_competition/yolo/: voc.data
opencv/GPU-Opencv/: GPU-Opencv.pro  Histogram.cpp  cuda.cu  gpu-opencv.cpp  init.h  main.cpp  video.cpp
opencv/Match_1/: 1.cpp.autosave  FindCorner .cpp  include.h
opencv/ORB_Match/: Calculation.cpp  FindCorner.cpp  Match.cpp  Match_1.pro  main.cpp
opencv/SVM_ARMOR/SVM_Multiclass/: CMakeLists.txt  main.cpp
opencv/SVM_ARMOR/SVM_SingleClassification/: CMakeLists.txt  main.cpp
opencv/SVM_ARMOR/pictures/: negativesamples.txt  postivesamples.txt  命令.txt
opencv/figure/: imageprocess.cpp  serial.cpp
opencv/figure/picture1/: 0.txt  3.txt  7.txt  8.txt  test.txt
opencv/figure/yolo/: voc.names  yolov3-test.cfg
opencv/kalman-opencv/: main.cpp
opencv/orc识别信用卡/: 信用卡类型及卡号OCR系统.py
opencv/yolov34-cpp-opencv-dnn/: CMakeLists.txt  README.md  main_yolo.cpp  opencv-yolov34.pro  yolo.h
opencv/yolov5-dnn-cpp-python/: CMakeLists.txt  README.md  main_yolo.cpp  yolo.h
opencv/yolov5-dnn-cpp-python/convert-onnx/: convert_onnx.py
others/Markdown_learn/: README.md
others/cmake/: README.md
others/cmake/cmake_learn_1/: CMakeLists.txt  main.cpp  myset.cpp
others/cmake/cmake_learn_2/: CMakeLists.txt
others/cmake/cmake_learn_3/: CMakeLists.txt
others/git/: README.md
others/intel-realsense_learn/deepth-color-aligin/: CMakeLists.txt  color-deepth.-align.cpp  deepth-color-aligin.cpp
others/intel-realsense_learn/depth-evaluate/: readme.md
others/intel-realsense_learn/depth-evaluate/Collect_Camera_Data/: CMakeLists.txt  depth_evaluate.cpp  depth_evaluate.out
others/intel-realsense_learn/read_frame/: CMakeLists.txt  read_frame.cpp  read_frame.out
others/vscode下.vscode配置/vscode+cmake/: README.md
others/vscode下.vscode配置/单文件+opencv/: README.md
others/vscode下.vscode配置/多文件+opencv/: README.md
python/LearnPython/: README.md
python/LearnPython/pythonwork1/: main.py
python/LearnPython/pythonwork10/: linux 常用命令.py  文件查找和编译器的使用.py
python/LearnPython/pythonwork2/: Calculator .py
python/LearnPython/pythonwork3/: 双人对战.py
python/LearnPython/pythonwork4/: 继承.py
python/LearnPython/pythonwork5/: __slots_属性.py  single 单例模式.py  属性的私有化.py
python/LearnPython/pythonwork6/: plane优化.py
python/LearnPython/pythonwork7/: file备份.py  os模块.py  文件定位.py  文件操作.py
python/LearnPython/pythonwork8/: 引用计数机制.py
python/LearnPython/pythonwork9/: 分组匹配.py  正则小结.txt  正则表达式.py  课后作业.py  贪婪模式和非贪婪模式.py  转义字符.py
python/Learn_Numpy/: 1.ipynb  1_quick_start.ipynb  2_type_of_data.ipynb  3_create_array.ipynb  4_NumPy_input_and_output.ipynb  5_index.ipynb  6_Broadcasting.ipynb  7_structured array.ipynb  readme.md
python/Learn_Pandas/: 1_pandas_object.ipynb  2_Data_value_and_selection.ipynb  3_Numerical_operation_method.ipynb  4_Hierarchical_index.ipynb
python/Learn_Python/pythonwork11/: MySQL使用.py  条件查询.py
python/Learn_Python/pythonwork2/: 函数.py
python/Learn_Python/pythonwork3/: 面向对象.py
python/Learn_Python/pythonwork4/: 多态.py  属性和方法.py  析构函数.py
python/Learn_Python/pythonwork5/: __new__方法.py  异常处理.py
python/Learn_Python/pythonwork6/: planeindex.py
python/Learn_Python/pythonwork7/: 文件操作.py  模块的制作.py  模块的调用.py
python/Learn_Python/pythonwork8/: 内存优化.py  命令行参数.py
python/Learn_Python/pythonwork9/: re中编译函数.py  贪婪模式和非贪婪模式.py
python/matplotlib/: 1.ipynb
ros/ros_learn/1_install_ros/: README.md
ros/ros_learn/2_cognition_ros2/: README.md
ros/ros_learn/5_action_and_parameter/: README.md
ros/ros_learn/6_ros_interface/: README.md
web/CSS/1_css_Basic_operation/: 1_CSS_color_grammar.html  2_CSS_font.html  3_CSS_text_appearance.html  4_CSS_style_sheet.html
web/html/1_create_web/: 1_create_page.html
web/html/2_Form manipulation/: 1_Create_table.html  2_Form_manipulation.html  3_Table_advanced_operations.html
(+80 files in other folders)
