# cmake_minimum_required(VERSION 3.10)

# # set the project name 设置工程名称
# project(Tutorial)

# # add the executable 添加可执行文件
# add_executable(Tutorial tutorial.cxx)
cmake_minimum_required(VERSION 3.10) 

# set the project name 
project(CalculateSqrt) 

# add the executable 
add_executable(CalculateSqrt hello.c) 